--- a/environment.yml
+++ b/environment.yml
@@ -27,22 +27,22 @@ dependencies:
   - bokeh=3.4.0=pyhd8ed1ab_0
   - brotli=1.1.0=hd590300_1
   - brotli-bin=1.1.0=hd590300_1
-  - brotli-python=1.1.0=py312h30efb56_1
+  - brotli-python=1.1.0=py311hb755f60_1
   - bzip2=1.0.8=hd590300_5
   - c-ares=1.27.0=hd590300_0
   - ca-certificates=2024.2.2=hbcca054_0
   - cairo=1.18.0=h3faef2a_0
-  - cartopy=0.22.0=py312hfb8ada1_1
+  - cartopy=0.22.0=py311h320fe9a_1
   - certifi=2024.2.2=pyhd8ed1ab_0
   - cfitsio=4.4.0=hbdc6101_0
-  - cftime=1.6.3=py312hc7c0aa3_0
+  - cftime=1.6.3=py311h1f0f07a_0
   - click=8.1.7=unix_pyh707e725_0
   - click-plugins=1.1.1=py_0
   - cligj=0.7.2=pyhd8ed1ab_1
   - cloudpickle=3.0.0=pyhd8ed1ab_0
-  - contourpy=1.2.0=py312h8572e83_0
+  - contourpy=1.2.0=py311h9547e67_0
   - cycler=0.12.1=pyhd8ed1ab_0
-  - cytoolz=0.12.3=py312h98912ed_0
+  - cytoolz=0.12.3=py311h459d7ec_0
   - dask=2024.3.1=pyhd8ed1ab_0
   - dask-core=2024.3.1=pyhd8ed1ab_0
   - dask-expr=1.0.4=pyhd8ed1ab_0
@@ -56,7 +56,7 @@ dependencies:
   - fontconfig=2.14.2=h14ed4e7_0
   - fonts-conda-ecosystem=1=0
   - fonts-conda-forge=1=0
-  - fonttools=4.49.0=py312h98912ed_0
+  - fonttools=4.49.0=py311h459d7ec_0
   - freetype=2.12.1=h267a509_2
   - freexl=2.0.0=h743c826_0
   - fsspec=2024.3.0=pyhca7485f_0
@@ -74,7 +74,7 @@ dependencies:
   - json-c=0.17=h7ab15ed_0
   - kealib=1.5.3=h2f55d51_0
   - keyutils=1.6.1=h166bdaf_0
-  - kiwisolver=1.4.5=py312h8572e83_1
+  - kiwisolver=1.4.5=py311h9547e67_1
   - krb5=1.21.2=h659d440_0
   - lcms2=2.16=hb7c19ff_0
   - ld_impl_linux-64=2.40=h41732ed_0
@@ -143,56 +143,56 @@ dependencies:
   - libzip=1.10.1=h2629f0a_3
   - libzlib=1.2.13=hd590300_5
   - locket=1.0.0=pyhd8ed1ab_0
-  - lz4=4.3.3=py312h03f37cb_0
+  - lz4=4.3.3=py311h38e4bf4_0
   - lz4-c=1.9.4=hcb278e6_0
   - lzo=2.10=h516909a_1000
-  - markupsafe=2.1.5=py312h98912ed_0
-  - matplotlib-base=3.8.3=py312he5832f3_0
+  - markupsafe=2.1.5=py311h459d7ec_0
+  - matplotlib-base=3.8.3=py311h54ef318_0
   - minizip=4.0.5=h0ab5242_0
-  - msgpack-python=1.0.7=py312h8572e83_0
+  - msgpack-python=1.0.7=py311h9547e67_0
   - munkres=1.1.4=pyh9f0ad1d_0
   - ncurses=6.4=h59595ed_2
-  - netcdf4=1.6.5=nompi_py312h26027e0_100
+  - netcdf4=1.6.5=nompi_py311he8ad708_100
   - nspr=4.35=h27087fc_0
   - nss=3.98=h1d7d5a4_0
-  - numpy=1.26.4=py312heda63a1_0
+  - numpy=1.26.4=py311h64a7726_0
   - openjpeg=2.5.2=h488ebb8_0
   - openssl=3.2.1=hd590300_0
   - orc=2.0.0=h1e5e2c1_0
   - packaging=24.0=pyhd8ed1ab_0
-  - pandas=2.2.1=py312hfb8ada1_0
+  - pandas=2.2.1=py311h320fe9a_0
   - partd=1.4.1=pyhd8ed1ab_0
   - pcre2=10.43=hcad00b1_0
-  - pillow=10.2.0=py312hf3581a9_0
+  - pillow=10.2.0=py311ha6c5da5_0
   - pip=24.0=pyhd8ed1ab_0
   - pixman=0.43.2=h59595ed_0
   - poppler=24.03.0=h590f24d_0
   - poppler-data=0.4.12=hd8ed1ab_0
   - postgresql=16.2=h7387d8b_0
   - proj=9.3.1=h1d62c97_0
-  - psutil=5.9.8=py312h98912ed_0
+  - psutil=5.9.8=py311h459d7ec_0
   - pthread-stubs=0.4=h36c2ea0_1001
-  - pyarrow=15.0.1=py312h176e3d2_2_cpu
+  - pyarrow=15.0.1=py311h39c9aba_2_cpu
   - pyarrow-hotfix=0.6=pyhd8ed1ab_0
   - pyparsing=3.1.2=pyhd8ed1ab_0
-  - pyproj=3.6.1=py312h38f1c37_5
+  - pyproj=3.6.1=py311hca0b8b9_5
   - pyshp=2.3.1=pyhd8ed1ab_0
   - pysocks=1.7.1=pyha2e5f31_6
-  - python=3.12.2=hab00c5b_0_cpython
+  - python=3.11.8=hab00c5b_0_cpython
   - python-dateutil=2.9.0=pyhd8ed1ab_0
   - python-tzdata=2024.1=pyhd8ed1ab_0
-  - python_abi=3.12=4_cp312
+  - python_abi=3.11=4_cp311
   - pytz=2024.1=pyhd8ed1ab_0
-  - pyyaml=6.0.1=py312h98912ed_1
-  - rasterio=1.3.9=py312h26ef92c_2
+  - pyyaml=6.0.1=py311h459d7ec_1
+  - rasterio=1.3.9=py311ha38370a_2
   - rdma-core=50.0=hd3aeb46_1
   - re2=2023.09.01=h7f4b329_2
   - readline=8.2=h8228510_1
   - rioxarray=0.15.1=pyhd8ed1ab_0
   - s2n=1.4.7=h06160fa_0
-  - scipy=1.12.0=py312heda63a1_2
+  - scipy=1.12.0=py311h64a7726_2
   - setuptools=69.2.0=pyhd8ed1ab_0
-  - shapely=2.0.3=py312h9e6bd2c_0
+  - shapely=2.0.3=py311h2032efe_0
   - six=1.16.0=pyh6c4a22f_0
   - snappy=1.1.10=h9fff704_0
   - snuggs=1.4.7=py_0
@@ -203,7 +203,7 @@ dependencies:
   - tiledb=2.20.1=h99d63bd_4
   - tk=8.6.13=noxft_h4845f30_101
   - toolz=0.12.1=pyhd8ed1ab_0
-  - tornado=6.4=py312h98912ed_0
+  - tornado=6.4=py311h459d7ec_0
   - tzcode=2024a=h3f72095_0
   - tzdata=2024a=h0c530f3_0
   - ucx=1.15.0=h11edf95_7
